--- a/arquivos/css/styletexto.css
+++ b/arquivos/css/styletexto.css
@@ -7,6 +7,36 @@
     --cor4: #e8c095;
     --cor5: #f7ecdf;
 }
+
+/*Menu*/
+.menuani{
+    display: block;
+    position: sticky;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    margin: 2% 2% 0% 0%;
+}
+.bar1, .bar2, .bar3{
+    width: 40px;
+    height: 5px;
+    background-color: #585858;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+.change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+}
+.change .bar2 {opacity: 0;}
+.change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+}
+.hide{
+    display: none;
+    height: fit-content;
+}
+/*Menu*/
+
 body{
     background-color: whitesmoke;
     font-family: "Montserrat", serif;
@@ -48,17 +78,20 @@ main{
 }
 .lore{
     margin: auto;
-    width: 50%;
+    width: 60%;
+    font-size: 1.6em;
 }
 .lore h2{
     margin-top: 0%;
 }
 .atuação{
+    display: grid;
     margin: auto;
-    width: 50%;
-}
-.atuação ul{
-    list-style: none;
+    width: 60%;
+    font-size: 1em;
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-template-columns: 400px auto auto auto auto auto;
 }
 h2{
     margin: auto;
